# edgelearning-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  README.md  benchmark_batch_sweep.cpp  benchmark_code_size.py  benchmark_edgelearning_cpp.cpp  benchmark_mixed_precision.cpp  benchmark_regression_vs_c_baseline.cpp  code_size_cpp_regression.cpp  measure_m55_regression_elf.py
benchmarks/firmware/stm32n6/el_cvscpp_ablation/: .env.example  Makefile  README.md  el_cvscpp_ablation_run.cpp  el_cvscpp_ablation_run.h  flash_and_run_n6.sh  plot_elf_component_breakdown_n6.py  plot_sweep_n6.py  report_sweep_n6.py  serial_capture.py
benchmarks/firmware/stm32n6/el_cvscpp_ablation/results/: stm32n6_convergence_2026-06-30_input3.csv  stm32n6_elf_component_breakdown_2026-06-30_input3.csv  stm32n6_speedup_2026-06-26_input3.csv  stm32n6_speedup_2026-06-30_input3.csv  stm32n6_sweep_2026-06-26_input3_10seed.csv  stm32n6_sweep_2026-06-30_input3_10seed.csv  stm32n6_sweep_2026-06-30_input3_10seed.md  stm32n6_training_component_breakdown_2026-06-26_input3.csv  stm32n6_training_component_breakdown_2026-06-30_input3.csv
benchmarks/firmware/stm32n6/m55_regression/: measure_m55_regression_elf.py
benchmarks/firmware/stm32n6/m55_regression/results/: m55_regression_elf_size.csv  m55_regression_elf_size.md
benchmarks/host/m2/batch_sweep/results/: batch_sweep_cpp_ofast.csv
benchmarks/host/m2/c_baseline_regression/: benchmark_code_size.py  benchmark_regression_vs_c_baseline.cpp  code_size_cpp_regression.cpp
benchmarks/host/m2/c_baseline_regression/results/: code_size_report.csv  host_regression_report.md
benchmarks/host/m2/mixed_precision/: benchmark_mixed_precision.cpp
benchmarks/host/m2/mixed_precision/results/: mixed_precision_report.md
benchmarks/mixed/: README.md
benchmarks/results/: batch_sweep_cpp_release.csv  code_size_report.csv  code_size_report.md  host_regression_report.md  m55_regression_elf_size.csv  m55_regression_elf_size.md  mixed_precision_convergence.csv  mixed_precision_report.md  mixed_precision_summary.csv
docs/: README.md  architecture.md  benchmarking.md  custom_extensions.md  errors.md  independent_redesign.md  limitations.md  memory_model.md
docs/api/: custom_extensions.md
docs/benchmarking/: README.md
docs/design/: architecture.md  cpp_redesign_rationale.md  independent_redesign.md  limitations.md
examples/: CMakeLists.txt  README.md  backend_policy.cpp  conv2d_mnist_shape.cpp  custom_activation.cpp  custom_layer.cpp  custom_layer_scale.cpp  custom_loss.cpp  custom_precision.cpp  external_arena.cpp  minimal_regression.cpp  minimal_regression_batch.cpp  precision_policy.cpp  simple_regression.cpp
examples/arduino_uno_smoke/: README.md  arduino_uno_smoke.ino
firmware/el_cvscpp_ablation/: .env.example  Makefile  README.md  el_cvscpp_ablation_run.cpp  flash_and_run_n6.sh  plot_elf_component_breakdown_n6.py  plot_sweep_n6.py  report_sweep_n6.py  report_variant_elf_sizes_n6.py  run_sweep_n6.sh  run_variant_size_sweep_n6.sh
firmware/el_cvscpp_ablation/results/: stm32n6_convergence_2026-06-26_input3.csv  stm32n6_elf_component_breakdown_2026-06-26_input3.csv  stm32n6_speedup_2026-06-26_input3.csv  stm32n6_sweep_2026-06-26_input3_10seed.csv  stm32n6_sweep_2026-06-26_input3_10seed.md  stm32n6_training_component_breakdown_2026-06-26_input3.csv  stm32n6_variant_elf_sizes_2026-06-26_input3.csv  stm32n6_variant_elf_sizes_2026-06-26_input3.md
include/edge/: activations.hpp  arena.hpp  backend.hpp  config.hpp  edge.hpp  initializers.hpp  losses.hpp  memory_plan.hpp  model.hpp  precision.hpp  profiling.hpp  serialization.hpp  status.hpp  tensor.hpp  tensor_spec.hpp  trainer.hpp
include/edge/backends/: m55.hpp
include/edge/layers/: conv2d.hpp  dense.hpp  flatten.hpp  layer_concepts.hpp
include/edge/optimizers/: adam.hpp  sgd.hpp
src/: backend_generic.cpp  backend_m55.cpp
tests/: CMakeLists.txt  test_arena.cpp  test_backend_m55.cpp  test_backward.cpp  test_compile_time_contracts.cpp  test_conv2d.cpp  test_conv2d_finite_difference.cpp  test_conv2d_mnist_shape.cpp  test_custom_activation.cpp  test_custom_layer.cpp  test_custom_loss.cpp  test_finite_difference.cpp  test_forward.cpp  test_harness.hpp  test_initializers.cpp  test_m55_regression_sweep.cpp  test_optimizer.cpp  test_precision_policy.cpp  test_serialization.cpp  test_trainer.cpp
